--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,27 @@ body {
 	text-decoration: none;
 	color: #000000;
 }
+.button {
+  background-color: chartreuse;
+  color: #000;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 2px;
+}
+.button:hover {
+  background-color: #000000;
+  color: #fff;
+}
+.button:disabled {
+  background-color: #f1f1f1;
+}
+.button:disabled:hover {
+  color: #000;
+  cursor: not-allowed;
+}
 .navigation {
   border: 1px solid black;
 }
